        Since this made editing the document impossible, I added some 
        defensive code.

      - Anchors around divs break in explorer, so they were put inside in 
        the xslt renderer.

      - i18n problem in views/edit/Asset/File/submit.py (Thanks Benno!)

      - Solved problem with trailing slashes in relative Links. (Thanks
        Benno!)

    Bugs fixed:

      - Fixed AutoTOC depth feature (issue 1693)

      - Fixed behavior in Internet Explorer where it's impossible to change
        the "link to" field in the image toolbox in kupu, by removing the
        onkeypress event.

      - Fixed minor bugs in kupu table toolbox where the column widths
        field did not get updated (issue 1577)
        
      - Fixed bug in scaling of images, where images with a scaling of 100%
        would return the modification date of the original hires image,
        creating problems with caching (issue 1557)
      
      - Fix https://infrae.com/issue/silva/issue1642, where the
        catalog was indexing XML tags.

      - Fix id mangling (https://infrae.com/issue/silva/issue1686), spaces
        are no longer allowed in new Ids.

  Silva 1.6b4

    Bugs fixed:

      - New version of SilvaMetadata (0.12) released which fixes a bug
        where storing of empty metadata fields/deleting metadata values was
        impossible.

  Silva 1.6b3 (first public beta)

    Features added

      - Assets now have a version_status method that always returns 'public'
        which means they can be found by SilvaFind.

      - Old version cleanup code was made more robust and can now be
        used to delete all old versions older than a certain date, 
        instead of just all old versions. 

      - Silva now uses ZCML for registration of Silva extensions and
        the content types they define. See doc/extension.txt for more
        information. See also doc/developer_changes.txt.

      - The Version/CatalogedVersion base class does not expect a