@@ -41,6 +41,12 @@
   <tal:block content="title">title</tal:block> &#8211;
   <tal:block content="string:$vein" i18n:translate="">vein</tal:block>
 </title>
+<tal:block replace="nothing"> _______ Allow callers to set base _______ </tal:block>
+<metal:block define-slot="base_href">
+  <base href=""
+        tal:condition="options/base_href | nothing"
+        tal:attributes="href options/base_href" />
+</metal:block>
 <link rel="shortcut icon"
   tal:attributes="href string:$root_url/globals/silvacon.ico"
 />
